k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finguard
  labels:
    app.kubernetes.io/name: finguard
    app.kubernetes.io/part-of: finguard-platform
