k8s/05-categorization-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categorization-service
  namespace: finguard
  labels:
    app: categorization-service
    app.kubernetes.io/name: categorization-service
    app.kubernetes.io/part-of: finguard-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categorization-service
  template:
    metadata:
      labels:
        app: categorization-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5003"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: categorization-service
          image: finguard-categorization-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 150m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: categorization-service
  namespace: finguard
  labels:
    app: categorization-service
    app.kubernetes.io/name: categorization-service
    app.kubernetes.io/part-of: finguard-platform
spec:
  type: ClusterIP
  ports:
    - port: 5003
      targetPort: 5003
      name: http
  selector:
    app: categorization-service
