k8s/06-fraud-detection-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-detection-service
  namespace: finguard
  labels:
    app: fraud-detection-service
    app.kubernetes.io/name: fraud-detection-service
    app.kubernetes.io/part-of: finguard-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-detection-service
  template:
    metadata:
      labels:
        app: fraud-detection-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5004"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: fraud-detection-service
          image: finguard-fraud-detection-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5004
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 160Mi
            limits:
              cpu: 300m
              memory: 350Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 5004
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5004
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
  namespace: finguard
  labels:
    app: fraud-detection-service
    app.kubernetes.io/name: fraud-detection-service
    app.kubernetes.io/part-of: finguard-platform
spec:
  type: ClusterIP
  ports:
    - port: 5004
      targetPort: 5004
      name: http
  selector:
    app: fraud-detection-service
